fix: form placement/dimensions on smaller vp

--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,6 @@ body {
 
   background-color: #1d3557;
   padding: 1rem;
-
-  position: relative;
 }
 
 ul {
